# zeromcp

./: Cargo.toml  LICENSE  README.md
examples/: cli.rs
examples/configs/: ha_proxy.toml  ha_sse.toml
src/: client.rs  config.rs  events.rs  lib.rs  manager.rs  models.rs  utils.rs
