[package]
name = "zeromcp"
version = "0.1.0"
edition = "2024"

[dependencies]
mdns-sd = "0.13"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
toml = "0.8"
futures = "0.3"
handlebars = "5.1.2"
serde_json = "1.0"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main", features = ["client", "transport-sse-client", "transport-child-process", "reqwest"] }
reqwest = "0.12"
ractor = { version = "0.15", features = ["async-trait"] }
async-trait = "0.1"
tracing-subscriber = "0.3"
